--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       - POSTGRES_USER=postgres
     depends_on:
       - db
+    ports:
+      - "8080:80"    
 
 volumes:
   db-nextcloud:
